# packages/agent/src/types/heartbeat.ts
@@ -1,0 +1,3 @@
+export interface Heartbeat {
+  interval: number
+}
